#18 | dummy fingerprinting service tested and implemented